<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/d_credentials_request"
        android:layout_marginBottom="20dp"
        android:text="@string/inicio_de_sesion"
        android:textSize="40sp"
        android:typeface="serif"
        android:layout_centerHorizontal="true"/>
    <RelativeLayout
        android:id="@+id/d_credentials_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <EditText
            android:id="@+id/d_email_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/correo_electronico"
            android:gravity="center"
            />
        <EditText
            android:id="@+id/d_password_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/d_email_input"
            android:layout_marginTop="15dp"
            android:hint="@string/password"
            android:gravity="center"
            android:inputType="textPassword"/>
    </RelativeLayout>
    <Button
        android:id="@+id/d_aceptar_button"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/d_credentials_request"
        android:layout_width="wrap_content"
        android:minWidth="120dp"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        android:text="@string/aceptar"
        android:gravity="center"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/d_crearCuenta"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/d_aceptar_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crear_cuenta"
        android:textColor="@android:color/holo_blue_dark"/>
    <TextView
        android:id="@+id/d_recuperarPass"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/d_aceptar_button"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recuoerar_contrase_a"
        android:textColor="@android:color/holo_blue_dark"/>
</RelativeLayout>